fix(card): improve color contrast

--- a/src/components/Card/style.module.scss
+++ b/src/components/Card/style.module.scss
@@ -74,6 +74,7 @@
 		padding-left: em(8);
 		background-color: $rouge_red;
 		color: $blue_emulsion;
+		font-size: 1.2em;
 		font-weight: 700;
 		line-height: 1.1;
 		cursor: pointer;
